# flappy-bird-bot-3D

./: .gitignore  README.md
drone_collision/: package.xml  setup.cfg  setup.py
drone_collision/drone_collision/: collision_monitor.py  contact_monitor.py
drone_controller/: package.xml  setup.cfg  setup.py
drone_controller/drone_controller/: controller_node.py  drone_controller_node.py
drone_controller/launch/: controller.launch.py
drone_description/: CMakeLists.txt  package.xml
drone_description/models/quadrotor/: model.config  model.sdf
drone_fitness/: package.xml  setup.cfg  setup.py
drone_fitness/drone_fitness/: fitness_evaluator.py
drone_ga/: package.xml  setup.cfg  setup.py
drone_ga/drone_ga/: ga_node.py
drone_ga/launch/: ga.launch.py
drone_world/: CMakeLists.txt  package.xml
drone_world/worlds/: drone_arena.sdf  flappy.sdf
install/: local_setup.sh  setup.sh
install/drone_collision/lib/drone_collision/: contact_monitor.py
install/drone_collision/share/drone_collision/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/drone_controller/lib/drone_controller/: drone_controller_node.py
install/drone_controller/share/drone_controller/: package.dsv  package.ps1  package.sh  package.xml
install/drone_description/share/drone_description/: local_setup.bash  local_setup.dsv  local_setup.sh  (+3 more)
launch/: full_system.launch.py  sim_drone_ga.launch.py
sim_drone_ga/: package.xml  setup.cfg  setup.py
sim_drone_ga/launch/: headless_training.launch.py  sim_drone_ga.launch.py  training_complete.launch.py
(+48 files in other folders)
